# mc_mini_test

./: .gitignore  CMakeLists.txt
glad/src/: glad.c  glad.h
include/cglm/cglm/: .travis.yml  CREDITS  Makefile.am  README.md  meson.build
include/cglm/cglm/docs/source/: affine-common.rst  affine-mat.rst  affine-post.rst  affine-pre.rst  affine.rst  affine2d.rst  api_inline_array.rst  api_struct.rst  box.rst  cam.rst  euler.rst  features.rst  io.rst  ivec2.rst  ivec3.rst  ivec4.rst  mat4.rst  opt.rst  quat.rst  sphere.rst  vec2.rst  vec3.rst  vec4.rst
include/cglm/cglm/include/cglm/: affine-mat.h  affine-post.h  affine-pre.h  affine.h  affine2d.h  box.h  euler.h  ivec2.h  ivec3.h  ivec4.h  mat4.h  quat.h  sphere.h  util.h  vec2.h  vec3.h  vec4.h
include/cglm/cglm/include/cglm/struct/: box.h  vec3.h  vec4.h
include/cglm/cglm/test/: runner.c  tests.h
include/cglm/cglm/test/src/: test_affine_mat.h  test_bezier.c  test_cam.h  test_cam_lh_no.h  test_cam_rh_no.h  test_cam_rh_zo.h  test_mat2.h  test_mat3.h  test_mat4.h  test_project.h  test_quat.h  tests.c
include/cglm/cglm/win/: cglm.vcxproj  cglm.vcxproj.filters
include/raymath/: raymath.h
include/stbi/include/: stbi.h
include/stbi/src/: stbi.c
shaders/: default_frag.glsl  default_vert.glsl
src/: main.c
src/entity/: camera.c  camera.h
src/entity/player/: player.c  player.h  voxel_handler.c  voxel_handler.h
src/renderer/: buffers.c  buffers.h  chunk.c  chunk.h  shader.c  shader.h  texture.c  texture.h
src/util/: utils.c  utils.h
stc_vulkan/: main.c
